--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,6 +27,7 @@ body, html {
     line-height: 1.5em;
     height: 100%;
     width: 100%;
+	overflow: hidden;
 }
 
 .bg {
@@ -35,7 +36,7 @@ body, html {
     display: flex;
     background-image: url(../img/alto.png);
     background-repeat: no-repeat;
-    background-size: auto 110%;
+    background-size: auto 100vh;
     background-position: 50% 50%;
     background-color: var(--bg-primary);
     /*overflow: hidden;*/
@@ -55,6 +56,7 @@ body, html {
     width: 35%;
     background-color: rgba(52,52,52,0.3);
     backdrop-filter: blur(1rem);
+	z-index: 10;
 }
 
 #list, #icons {
@@ -73,6 +75,7 @@ body, html {
     filter: grayscale(.2);
     transition: filter 0.1s ease-in-out, margin 0.2s ease-in-out 0.05s;
     cursor: pointer;
+	z-index: 11;
 }
 
 .olist_active {
@@ -86,6 +89,7 @@ body, html {
     justify-content: center;
     flex-direction: column;
     cursor: pointer;
+	z-index: 11;
 }
 
 .ilist_title {
@@ -96,11 +100,13 @@ body, html {
 .ilist_icon {
     align-items: center;
     gap: 1.25rem;
+	z-index: 11;
 }
 
 
 .title, .description {
     transition: color 0.2s ease-in-out 0.05s, font-size 0.2s cubic-bezier(0.95,-0.6, 0.45, 2) 0.05s;
+	z-index: 11;
 }
 
 
@@ -126,6 +132,7 @@ body, html {
 .title_icon {
     transform: scale(0);
     transition: transform 0.3s cubic-bezier(0.95,-0.6, 0.45, 2) 0.05s, color 0.2s ease-in-out 0.1s;
+	z-index: 11;
 }
 
 .title_icon_active { /* indirect */
@@ -149,6 +156,7 @@ body, html {
     height: 100%;
     width: 65%;
     background-color: rgba(192,192,192,0.1);
+	z-index: 7;
 }
 
 
@@ -162,6 +170,7 @@ body, html {
     align-items: center;
     gap: 3rem;
     transition: margin 0.2s ease-in-out 0.05s;
+	z-index: 8;
 }
 
 .icons_active { /* hover icon list */
@@ -171,6 +180,7 @@ body, html {
 
 .icon {
     transform: scale(0);
+	z-index: 100001;
 }
 
 .icon_active_b { /* indirect list */
